fix: navbar logo alignment

--- a/src/components/navBar/navBar.module.scss
+++ b/src/components/navBar/navBar.module.scss
@@ -6,36 +6,36 @@
   right: 0;
   align-items: center;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   background-color: $background-color;
-  box-shadow: 0px 4px 4px 0px #00000040;
+  box-shadow: $box-shadow;
   padding: 10px;
 }
+
 .logo {
   display: flex;
   align-items: center;
   margin-left: 60px;
   @include hover-effect-tech;
+  @media (max-width: 768px) {
+    margin-left: 30px;
+  }
+  @media (max-width: 425px) {
+    margin-left: 5px;
+  }
 }
+
 .links {
   display: flex;
-  flex-direction: row;
   gap: 20px;
   margin-right: 45px;
   font-size: 0.75rem;
   color: $primary-color;
-
   span {
     color: $text-color;
   }
   a {
     @include hover-effect-tech;
     text-decoration: none;
-  }
-}
-@media (max-width: 768px) {
-  .logo {
-    margin-left: 30px;
   }
 }
